# glyphrs

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  screenshot
.github/workflows/: rust.yml
cli/: main.rs
core/: clap.rs  core.rs  message_gen.rs
core/fonts/: font_handling.rs  fonts.toml
package/: glyphrs-0.1.0.vsix
page/: LICENSE  package.json  svelte.config.js  tailwind.config.js
page/src/: app.html
page/src/lib/components/reusable/: CenterBlock.svelte  Wiggle.svelte
page/src/lib/components/universal/: footer.svelte  nav.svelte
page/src/routes/: +layout.svelte  +page.svelte
src/: clap.rs  fonts.rs  lib.rs  main.rs  message_gen.rs  test.rs
src/fonts/: font_handling.rs  fonts.toml  mod.rs
vscode_extension/: package.json  publish.sh
vscode_extension/src/: extension.ts
