[package]
name = "glyphrs"
version = "1.0.4"
edition = "2021"
description = "A text art generator written in Rust"
license = "MIT"

[lib]
name = "glyphrs_core"
path = "./core/core.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
regex = "1.9.3"
sqlparser = "0.45.0"
itertools = "0.11.0"
wasm-bindgen = "0.2.87"
glyphrs = "0.1.7"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
