[package]
name = "glyphrs"
version = "0.2.2"
edition = "2021"
description = "A text art generator written in Rust"
license = "MIT"

[[bin]]
name = "glyphrs"
path = "./cli/main.rs"

[lib]
name = "glyphrs_core"
path = "./core/core.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = "4.5.4"
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.13"
wasm-bindgen = "0.2.87"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
